[gd_scene load_steps=12 format=3 uid="uid://b1s71hosugqju"]

[ext_resource type="Theme" uid="uid://bitq02d30r24m" path="res://UI/menu_theme.tres" id="1_027ve"]
[ext_resource type="Script" path="res://UI/inventory_gui.gd" id="2_b6dus"]
[ext_resource type="StyleBox" uid="uid://b0gg650riimlg" path="res://UI/menu_style_box_no_shadow.tres" id="2_eui1b"]
[ext_resource type="Texture2D" uid="uid://dh6ybnj7sbiew" path="res://icon.svg" id="2_l2cim"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="5_gemym"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="6_jujvs"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="7_dkhww"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="8_nxsqo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nagy7"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.10748, 0.10748, 0.10748, 1)
border_width_left = 8
border_width_right = 8
border_color = Color(0.21, 0.21, 0.21, 1)
corner_radius_top_left = 30
corner_radius_top_right = 2
corner_radius_bottom_right = 30
corner_radius_bottom_left = 2
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jmfxl"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.0901961, 0.0901961, 0.0901961, 1)
border_width_left = 8
border_width_right = 8
border_color = Color(0.0901961, 0.0901961, 0.0901961, 1)
corner_radius_bottom_right = 30
expand_margin_left = 12.0
expand_margin_top = 33.0
expand_margin_right = 12.0
expand_margin_bottom = 20.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_47wkm"]

[node name="Inventory_GUI" type="Control"]
layout_direction = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("1_027ve")
script = ExtResource("2_b6dus")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 1023.0
offset_top = 76.0
offset_right = 1883.0
offset_bottom = 871.0
theme_override_styles/panel = SubResource("StyleBoxFlat_nagy7")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Tabs" type="TabBar" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
current_tab = 0
tab_alignment = 1
clip_tabs = false
scrolling_enabled = false
tab_count = 4
tab_0/title = "  ‚åò Gear  "
tab_1/title = "  ‚ùñ Dreamkin  "
tab_2/title = "  ‚çü Items   "
tab_3/title = "  üù∞ Keys  "

[node name="Panel" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_jmfxl")

[node name="View" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Panel"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer/Panel/View"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_47wkm")
horizontal_scroll_mode = 0

[node name="List" type="VBoxContainer" parent="PanelContainer/VBoxContainer/Panel/View/ScrollContainer"]
layout_mode = 2

[node name="Info" type="VBoxContainer" parent="PanelContainer/VBoxContainer/Panel/View"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer/Panel/View/Info"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("2_eui1b")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/Panel/View/Info/PanelContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer/Panel/View/Info/PanelContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_l2cim")
stretch_mode = 4

[node name="Details" type="VBoxContainer" parent="PanelContainer/VBoxContainer/Panel/View/Info/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/Panel/View/Info/PanelContainer/VBoxContainer/Details"]
layout_mode = 2
text = "Item name"

[node name="Description" type="RichTextLabel" parent="PanelContainer/VBoxContainer/Panel/View/Info/PanelContainer/VBoxContainer/Details"]
clip_contents = false
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_027ve")
bbcode_enabled = true
text = "[color=078ef5]‚óÜ[/color] 5  [color=364196]‚ú´[/color] Void
[color=9e9e9e80]Flavor Text[/color]
Test description. This does something cool."
fit_content = true
scroll_active = false
shortcut_keys_enabled = false

[node name="Options_Barrier" type="Control" parent="."]
layout_direction = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_direction = 2
layout_mode = 1
offset_left = 755.0
offset_top = 294.0
offset_right = 795.0
offset_bottom = 334.0

[node name="List" type="VBoxContainer" parent="PanelContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="StateChart" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("5_gemym")

[node name="Inventory_GUI" type="Node" parent="StateChart"]
script = ExtResource("6_jujvs")
initial_state = NodePath("Disabled")

[node name="Disabled" type="Node" parent="StateChart/Inventory_GUI"]
script = ExtResource("7_dkhww")

[node name="on_gui_enabled" type="Node" parent="StateChart/Inventory_GUI/Disabled"]
script = ExtResource("8_nxsqo")
to = NodePath("../../Enabled")
event = &"on_gui_enabled"
delay_in_seconds = "0.0"

[node name="Enabled" type="Node" parent="StateChart/Inventory_GUI"]
script = ExtResource("6_jujvs")
initial_state = NodePath("Gear")

[node name="on_gui_disabled" type="Node" parent="StateChart/Inventory_GUI/Enabled"]
script = ExtResource("8_nxsqo")
to = NodePath("../../Disabled")
event = &"on_gui_disabled"
delay_in_seconds = "0.0"

[node name="on_gui_toggle" type="Node" parent="StateChart/Inventory_GUI/Enabled"]
script = ExtResource("8_nxsqo")
to = NodePath("../../Disabled")
event = &"on_gui_toggle"
delay_in_seconds = "0.0"

[node name="on_gui_gear" type="Node" parent="StateChart/Inventory_GUI/Enabled"]
script = ExtResource("8_nxsqo")
to = NodePath("../Gear")
event = &"on_gui_gear"
delay_in_seconds = "0.0"

[node name="on_gui_dreamkin" type="Node" parent="StateChart/Inventory_GUI/Enabled"]
script = ExtResource("8_nxsqo")
to = NodePath("../Dreamkin")
event = &"on_gui_dreamkin"
delay_in_seconds = "0.0"

[node name="on_gui_items" type="Node" parent="StateChart/Inventory_GUI/Enabled"]
script = ExtResource("8_nxsqo")
to = NodePath("../Items")
event = &"on_gui_items"
delay_in_seconds = "0.0"

[node name="on_gui_keys" type="Node" parent="StateChart/Inventory_GUI/Enabled"]
script = ExtResource("8_nxsqo")
to = NodePath("../Keys")
event = &"on_gui_keys"
delay_in_seconds = "0.0"

[node name="Gear" type="Node" parent="StateChart/Inventory_GUI/Enabled"]
script = ExtResource("7_dkhww")

[node name="Dreamkin" type="Node" parent="StateChart/Inventory_GUI/Enabled"]
script = ExtResource("7_dkhww")

[node name="Items" type="Node" parent="StateChart/Inventory_GUI/Enabled"]
script = ExtResource("7_dkhww")

[node name="Keys" type="Node" parent="StateChart/Inventory_GUI/Enabled"]
script = ExtResource("7_dkhww")
